# jagascripts

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  requirements.txt
01_Proyecto_Jupiter/: .gitignore  README.md  task-definition.json
01_Proyecto_Jupiter/phishing-detect/: .coverage  .env.example  .pre-commit-config.yml  Dockerfile  Preguntas de prueba.txt  docker-compose.yml  flake8_results.txt  flake8_results_2.txt  requirements.txt
02_RAG_Vectoriales/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
02_RAG_Vectoriales/data/: summaries.json
02_RAG_Vectoriales/qdrant_config/: config.yaml
02_RAG_Vectoriales/scripts/: bulk_ingest.py  create_llamaindex_index.py  preprocessing.py
02_RAG_Vectoriales/src/: config.py  main.py
02_RAG_Vectoriales/tests/: test_ingest.py  test_search.py
03_Agente_Voz_Conversacional/: .gitignore  07_entrega_final.md  MEMORIA_PROYECTO.md  README.md  TEST_CASES_VOICE.md  example.env  pyproject.toml  voice_client.py
03_Agente_Voz_Conversacional/backend/: ingesta.py  main.py
03_Agente_Voz_Conversacional/data/: rag_cache.json
04_API_REST_FastAPI/: .gitignore  README.md  requirements.txt
04_API_REST_FastAPI/app/: main.py
05_Portal_Web_Angular/: README.md
07_Fast_Food_Company/: .gitignore  README.md  build.xml
07_Fast_Food_Company/MySqlImport/: fastfoodcompany.sql
08_Web_Agrupados_JEE/: README.md  build.xml
09_App_Agrupados_Android/: README.md  TO_Android.docx  settings.gradle
10_Arquitectura_con_IA/: README.md  prompts.json
app/: __init__.py
app/main/: __init__.py  (+1 more)
(+336 files in other folders)
